gatu.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  labels:
    for-gatus: 'true'
spec:
  type: ClusterIP
  selector:
    app: gatus
  ports:
  - name: http
    port: 8080
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  labels:
    for-gatus: 'true'
spec:
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
        for-gatus: 'true'
    spec:
      containers:
      - name: gatus
        image: twinproduction/gatus:v4.0.0
 
        #        resources:
        #          limits:
        #            memory: "1000Mi"
        #            cpu: "500m"
        volumeMounts:
          - name: config-gatus
            mountPath: /config
          - name: data-gatus
            mountPath: /data
        ports:
          - name: http
            containerPort: 8080
 
 
      volumes:
        - name: config-gatus
          hostPath:
            path: /srv/config-gatus
            type: DirectoryOrCreate
        - name: data-gatus
          hostPath:
            path: /srv/data-gatus
            type: DirectoryOrCreate
