ingress-gatus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gatus
  annotations:
    kubernetes.io/ingress.class: "nginx"
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gatus.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatus
            port:
              number: 8080
